# test-python-project

./: .copier-answers.yml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
src/locomoset/: __init__.py
src/locomoset/config/: config_classes.py  config_gen.py
src/locomoset/datasets/: create_bin_dataset.py  preprocess.py
src/locomoset/metrics/: aggregate.py  classes.py  evaluate.py  experiment.py  logme.py  nce.py  parc.py  renggli.py  task_agnostic.py
src/locomoset/models/: classes.py  features.py  load.py  train.py
src/locomoset/plots/: plot_run_stats.py  utils.py
src/locomoset/run/: run_metrics.py
tests/: conftest.py  test_aggregate_metric_for_metrics.py  test_config_classes.py  test_experiment_classes.py  test_features.py  test_load_model.py  test_logme.py  test_model_classes.py  test_nce.py  test_task_agnostic.py  test_train.py
tests/data/: dummy_config.py  make_dummy_processor.py
tests/tests/: test_metrics_for_metrics.py  test_parc.py  test_preprocess.py  test_renggli.py
tests/tests/data/: make_dummy_data.py  make_dummy_model.py
