[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "locomoset"
version = "0.1.0"
authors = [
  { name = "Jack Roberts", email = "jroberts@turing.ac.uk" },
]
description = "Testing REG Python project template"
readme = "README.md"
requires-python = ">=3.10,<3.11"
classifiers = [
  "Development Status :: 1 - Planning",
  "Intended Audience :: Science/Research",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering",
  "Typing :: Typed",
]
dependencies = [
  "transformers[torch]~=4.39.3",
  "datasets~=2.18.0",
  "evaluate~=0.4.1",
  "torch~=2.2.2",
  "torchvision~=0.17.2",
  "scikit-learn~=1.4.1.post1",
  "pyyaml~=6.0.1",
  "matplotlib~=3.8.4",
  "numba~=0.59.1",
  "h5py~=3.10.0",
  "wandb~=0.17.0",
  "jinja2~=3.1.3"
]

[project.optional-dependencies]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  "pytest >=6",
  "pytest-cov >=3",
  "pre-commit >=3",
]

[project.urls]
Homepage = "https://github.com/jack89roberts/test-python-project"
"Bug Tracker" = "https://github.com/jack89roberts/test-python-project/issues"
Discussions = "https://github.com/jack89roberts/test-python-project/discussions"
Changelog = "https://github.com/jack89roberts/test-python-project/releases"

[tool.hatch.envs.default]
dependencies = [
  "pytest",
  "pytest-cov",
  "pre-commit",

]

[tool.coverage]
run.source = ["locomoset"]
port.exclude_lines = [
  'pragma: no cover',
  '\.\.\.',
  'if typing.TYPE_CHECKING:',
]

[tool.mypy]
files = ["src", "tests"]
python_version = "3.10"
show_error_codes = true
warn_unreachable = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
strict = false


[tool.ruff]
src = ["src"]
exclude = []
line-length = 88  # how long you want lines to be

[tool.ruff.format]
docstring-code-format = true  # code snippets in docstrings will be formatted

[tool.ruff.lint]
select = [
  "E", "F", "W", # flake8
  "B",           # flake8-bugbear
  "I",           # isort
  "ARG",         # flake8-unused-arguments
  "C4",          # flake8-comprehensions
  "EM",          # flake8-errmsg
  "ICN",         # flake8-import-conventions
  "ISC",         # flake8-implicit-str-concat
  "G",           # flake8-logging-format
  "PGH",         # pygrep-hooks
  "PIE",         # flake8-pie
  "PL",          # pylint
  "PT",          # flake8-pytest-style
  "RET",         # flake8-return
  "RUF",         # Ruff-specific
  "SIM",         # flake8-simplify
  "UP",          # pyupgrade
  "YTT",         # flake8-2020
  "EXE",         # flake8-executable
]
ignore = [
  "PLR",    # Design related pylint codes
  "ISC001", # Conflicts with formatter
]
unfixable = [
  "F401",   # Would remove unused imports
  "F841",   # Would remove unused variables
]
flake8-unused-arguments.ignore-variadic-names = true  # allow unused *args/**kwargs
isort.required-imports = ["from __future__ import annotations"]
